/**
 * La clase Vendedor extiende la clase Usuario y representa a un usuario con el rol de vendedor.
 */
package usuarios;

public class Vendedor extends Usuario{

    public Vendedor(int id, String nombre, String email, String password) {
        super(id, nombre, email, password);
        //TODO Auto-generated constructor stub
    }

}
